Fix spacing for pagination in reference to RT #33702.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@16669 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/CategoryHubs/CategoryHubs.css
+++ b/extensions/wikia/CategoryHubs/CategoryHubs.css
@@ -34,7 +34,7 @@ body.ns-14 h1.firstHeading {
 }
 
 .cathub-pagination {
-	margin: 0;
+	margin: 1.5em 0 0 0;
 	padding: 0;
 }
 .cathub-pagination li {
